--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
+
+    implementation 'org.flywaydb:flyway-core:9.16.0'
+    implementation 'org.postgresql:postgresql:42.5.1'
+
     implementation 'io.vavr:vavr-kotlin:0.10.2'
     implementation 'io.vavr:vavr:0.10.0'
     implementation 'com.google.guava:guava:31.1-jre'
