Adding cache in progress

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
     implementation 'com.github.java-json-tools:json-patch:1.13'
 
+    implementation 'org.ehcache:ehcache:3.10.6'
+
     implementation 'org.flywaydb:flyway-core:9.16.0'
     implementation 'org.postgresql:postgresql:42.5.1'
     implementation 'io.vertx:vertx-pg-client:4.4.0'
