--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    id 'org.springframework.boot' version '3.0.2'
+    id 'org.springframework.boot' version '2.7.3'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'org.jetbrains.kotlin.jvm' version '1.7.22'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.7.22'
@@ -34,6 +34,9 @@ dependencies {
     implementation 'org.flywaydb:flyway-core:9.16.0'
     implementation 'org.postgresql:postgresql:42.5.1'
     implementation 'io.vertx:vertx-pg-client:4.4.0'
+
+//    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.3'
 
     implementation 'io.vavr:vavr-kotlin:0.10.2'
     implementation 'io.vavr:vavr:0.10.0'
