--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,11 @@ dependencies {
     implementation 'org.apache.tika:tika-parsers:1.24'
 
     implementation 'org.flywaydb:flyway-core:9.16.0'
-    implementation 'org.postgresql:postgresql:42.5.1'
-    implementation 'io.vertx:vertx-pg-client:4.4.0'
+    implementation 'org.postgresql:postgresql:42.7.3'
+    implementation 'io.vertx:vertx-pg-client:4.5.7'
+    implementation 'com.ongres.scram:common:2.1'
+    implementation 'com.ongres.scram:client:2.1'
+
 
 //    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.3'
